2000-09-10  Havoc Pennington  <hp@pobox.com>

	* Another rename fest:

	#!/usr/bin/perl -pi.bak

	## note that this regexp could affect non-GConf stuff
	s/writeable/writable/g;

	s/gconf_meta_info_destroy/gconf_meta_info_free/g;
	s/gconf_database_destroy/gconf_database_free/g;
	s/gconf_source_destroy/gconf_source_free/g;
	s/gconf_sources_destroy/gconf_sources_free/g;
	s/gconf_locale_cache_destroy/gconf_locale_cache_free/g;

2000-09-10  Havoc Pennington  <hp@pobox.com>

	* gconf/gconf-value.c (gconf_value_new): don't use
	GCONF_INTERNAL_VALUE_TYPE_VALID

	* gconf/gconf-internals.h, gconf/gconf-error.h:
	(gconf_error_new)
	(gconf_set_error)
	(gconf_compose_errors):
	Move these to gconf-internals.h, now they aren't needed due
	to GError

	* gconf/gconf.c: Get rid of GConfEnginePrivate, just define struct
	_GConfEngine in the private .c file, like a sane person.

	* gconf/gconf-value.h: remove GCONF_INTERNAL_VALUE_TYPE_VALID

	* gconf/gconf.h: #ifdef the GNOME module system and popt stuff for
	GNOME 1.4. This stuff is tied to GNOME 2.0 and still unstable in
	that respect; should not be used before GNOME 2.0
	(gconf_get_string): forgot to rename this earlier
	
2000-09-09  Havoc Pennington  <hp@pobox.com>

	* gconf/gconfd.c (half_hour_timeout): Convert one_hour_timeout to
	half_hour_timeout() to more agressively prune resources. In the
	half hour timeout, if we have no connected listeners on any
	database, shut down gconfd. (We might want to make the timeout
	length configurable; and for laptops people might not want any 
	timeouts at all, since it will wake up their laptop.)
	(fast_cleanup): Remove comment about getting incoming connections
	after shutting things down; this is no longer a problem because
	we deactivate databases in the POA

2000-09-09  Havoc Pennington  <hp@pobox.com>

	* gconf/Makefile.am (libgconf_1_la_SOURCES): Move gconf-backend.h
	here, I don't see why it was in the public headers


	Throughout, rename a bunch of stuff:

	#!/usr/bin/perl -pi.bak
