@@ -1,5 +1,10 @@
 2000-09-10  Havoc Pennington  <hp@pobox.com>
 
+	* gconf/gconf-value.c (gconf_entry_new): New function
+	(gconf_entry_set_value): New function
+
+2000-09-10  Havoc Pennington  <hp@pobox.com>
+
 	* Another rename fest:
 
 	#!/usr/bin/perl -pi.bak
